--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background1"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ram.android.myhabittracker.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
+    <EditText
+        android:id="@+id/personEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Enter HabitName: "
+        android:inputType="textPersonName"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColorHint="#000"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/numberView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Enter Duration"
+        android:inputType="number"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColorHint="#000"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/sample_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="insert" />
+
+    <EditText
+        android:id="@+id/personEditText1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Enter HabitName to be searched: "
+        android:inputType="textPersonName"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColorHint="#000"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/sample_button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="search" />
+
+    <TextView
+        android:id="@+id/sample_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="#000"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/sample_text_view1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="#000"
+        android:textStyle="bold" />
+</LinearLayout>
